...
        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:src="@drawable/boy_1"
            android:contentDescription="@string/boy_character_1" />
        <Button
            android:id="@+id/boy1"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:background="@android:color/transparent"/>
    </RelativeLayout>

    <RelativeLayout
...
        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:src="@drawable/boy_2"
            android:contentDescription="@string/boy_character_2" />
        <Button
            android:id="@+id/boy2"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:background="@android:color/transparent"/>
    </RelativeLayout>

    <RelativeLayout
...
        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:src="@drawable/girl_1"
            android:contentDescription="@string/girl_character_1" />
        <Button
            android:id="@+id/girl1"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:background="@android:color/transparent"/>
    </RelativeLayout>

    <RelativeLayout
...
        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:src="@drawable/girl_2"
            android:contentDescription="@string/girl_character_2" />
        <Button
            android:id="@+id/girl2"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:background="@android:color/transparent"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
